--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8" />
     <title>Cafe Menu</title>
   </head>
-  <body></body>
+  <body>
+    <h1>CAMPER CAFE</h1>
+  </body>
 </html>
