--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Cafe Menu</title>
   </head>
   <body>
-    <h1>CAMPER CAFE</h1>
-    <p>Est. 2020</p>
+    <header>
+      <h1>CAMPER CAFE</h1>
+      <p>Est. 2020</p>
+    </header>
   </body>
 </html>
