--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <h1>CAMPER CAFE</h1>
       <p>Est. 2020</p>
     </header>
-    <main></main>
+    <main>
+      <section></section>
+    </main>
   </body>
 </html>
