--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <p>Est. 2020</p>
     </header>
     <main>
-      <section></section>
+      <section>
+        <h2>Coffee</h2>
+      </section>
     </main>
   </body>
 </html>
