--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Cafe Menu</title>
-    <style></style>
+    <style>
+      h1 {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
