--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div></div>
+    <div class="menu"></div>
     <header>
       <h1>CAMPER CAFE</h1>
       <p>Est. 2020</p>
