--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <main>
       <section>
         <h2>Coffee</h2>
-        <article></article>
+        <article>
+          <p>French Vanilla</p>
+          <p>3.00</p>
+        </article>
       </section>
     </main>
   </body>
