--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <section>
         <h2>Coffee</h2>
-        <article>
+        <article class="item">
           <p class="flavor">French Vanilla</p>
           <p class="price">3.00</p>
         </article>
