--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <p class="price">4.50</p>
         </article>
       </section>
+      <section></section>
     </main>
   </body>
 </html>
