--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <p class="price">4.50</p>
         </article>
       </section>
-      <section></section>
+      <section>
+        <h2>Desserts</h2>
+      </section>
     </main>
   </body>
 </html>
