--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </section>
       <section>
         <h2>Desserts</h2>
+        <article class="item"></article>
       </section>
     </main>
   </body>
