--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       </section>
       <section>
         <h2>Desserts</h2>
-        <article class="item"></article>
+        <article class="item">
+          <p>Donut</p>
+          <p>1.50</p>
+        </article>
       </section>
     </main>
   </body>
