--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <section>
         <h2>Desserts</h2>
         <article class="item">
-          <p>Donut</p>
-          <p>1.50</p>
+          <p class="dessert">Donut</p>
+          <p class="price">1.50</p>
         </article>
       </section>
     </main>
