--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="menu"></div>
     <header>
       <h1>CAMPER CAFE</h1>
-      <p>Est. 2020</p>
+      <p class="established">Est. 2020</p>
     </header>
     <main>
       <section>
