--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         </article>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>
+        <a href="https://www.freecodecamp.org" target="_blank"
+          >Visit our website</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
