--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           >Visit our website</a
         >
       </p>
-      <p>123 Free Code Camp Drive</p>
+      <p class="address">123 Free Code Camp Drive</p>
     </footer>
   </body>
 </html>
