--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <hr />
     <main>
       <section>
-        <h2>Coffee</h2>
+        <h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
+            alt="coffee icon"
+          />Coffee
+        </h2>
         <article class="item">
           <p class="flavor">French Vanilla</p>
           <p class="price">3.00</p>
