--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         </article>
       </section>
       <section>
-        <h2>Desserts</h2>
+        <h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
+            alt="pie icon"
+          />Desserts
+        </h2>
         <article class="item">
           <p class="dessert">Donut</p>
           <p class="price">1.50</p>
